--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,31 @@
-# History files
+# Quarto
+/.quarto/
+_site/
+*.log
+
+# R
+.Rproj.user
 .Rhistory
-.Rapp.history
-
-# Session Data files
 .RData
-.RDataTmp
-
-# User-specific files
 .Ruserdata
+*.Rproj
 
-# Example code in package build process
-*-Ex.R
+# OS
+.DS_Store
+Thumbs.db
+*.swp
+*~
 
-# Output files from R CMD build
-/*.tar.gz
+# Editor
+.vscode/
+.idea/
 
-# Output files from R CMD check
-/*.Rcheck/
+# Keep rendered outputs in docs/ but ignore local renders in root
+/*.html
+/*.pdf
+/*.docx
+!docs/
 
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# libraries
-libs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
+# Temporary files
+*.tmp
+*.bak
